# op-plugin

./: .clang-format  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  CONTRIBUTING_en.md  LICENSE  OWNERS  README.md  README_en.md  SECURITYNOTE.md  Third_Party_Open_Source_Software_Notice  gencode.sh
examples/cpp_extension/: CMakeLists.txt  README.md  README_en.md  setup.py
examples/cpp_extension/csrc/: add_custom.asc  pybind11.asc
examples/cpp_extension/op_extension/: __init__.py  _load.py  ops.py
examples/cpp_extension/test/: test.py
op_plugin/: CMakeLists.txt
op_plugin/config/: README.md  README_en.md  atb_ops.yaml  deprecated.yaml  derivatives.yaml  op_plugin_functions.yaml
op_plugin/config/v1r11/: aclnn_derivatives.yaml  derivatives.yaml  npu_native_functions.yaml  op_plugin_functions.yaml
op_plugin/config/v2r0/: derivatives.yaml  op_plugin_functions.yaml
op_plugin/config/v2r1/: derivatives.yaml  npu_native_functions.yaml  op_plugin_functions.yaml
op_plugin/config/v2r2/: derivatives.yaml  op_plugin_functions.yaml
op_plugin/config/v2r3/: derivatives.yaml  op_plugin_functions.yaml
op_plugin/config/v2r4/: derivatives.yaml  op_plugin_functions.yaml
op_plugin/config/v2r5/: op_plugin_functions.yaml
op_plugin/include/: atb_ops.h  npu_cpp_extension.h  ops.h
op_plugin/ops/: OpInterface.h
op_plugin/ops/aclops/: AbsKernelNpu.cpp  AcosKernelNpu.cpp  AcoshKernelNpu.cpp  AdaptiveAvgPool1dKernelNpu.cpp  AdaptiveAvgPool2dBackwardKernelNpu.cpp  AdaptiveAvgPool2dKernelNpu.cpp  AdaptiveAvgPool3dBackwardKernelNpu.cpp  AdaptiveAvgPool3dKernelNpu.cpp  AdaptiveMaxPool2dBackwardKernelNpu.cpp  AdaptiveMaxPool2dKernelNpu.cpp  AddKernelNpu.cpp  AddLayerNormBackwardKernelNpu.cpp  AddReluKernelNpu.cpp  AddRmsNormKernelNpu.cpp  AddbmmKernelNpu.cpp  AddcdivKernelNpu.cpp  AddcmulKernelNpu.cpp  AddmmKernelNpu.cpp  AddmvKernelNpu.cpp  AddrKernelNpu.cpp  AffineGridGeneratorBackwardKernelNpu.cpp  AffineGridGeneratorKernelNpu.cpp  AllKernelNpu.cpp  AnchorResponseFlagsKernelNpu.cpp  AnyKernelNpu.cpp  ApplyAdamKernelNpu.cpp  ArangeKernelNpu.cpp  ArgmaxKernelNpu.cpp  ArgminKernelNpu.cpp  ArgsortKernelNpu.cpp  AsStridedKernelNpu.cpp  AsinhKernelNpu.cpp  Atan2KernelNpu.cpp  AtanKernelNpu.cpp  AtanhKernelNpu.cpp  AvgPool2dBackwardKernelNpu.cpp  AvgPool2dKernelNpu.cpp  AvgPool3dBackwardKernelNpu.cpp  AvgPool3dKernelNpu.cpp  BaddbmmKernelNpu.cpp  (+371 more)
op_plugin/ops/atb/: Fa3Atb.cpp  FusedAddDivAtb.cpp  GroupTopkAtb.cpp  LinearAtb.cpp  MLAPreprocessAtb.cpp  MultiHeadLatentAttentionAtb.cpp  PagedAttentionAtb.cpp  PagedAttentionAtbV2.cpp  PagedAttentionMlaAtb.cpp  PagedAttentionSplitfuse.cpp  PagedAttentionSplitfuseV2.cpp  PagedCacheLoadAtb.cpp  QuantPerTensorAtb.cpp  QuantRmsNormAtb.cpp  ReshapeAndCachAtb.cpp  ReshapeAndCacheSisoAtb.cpp  RingMlaAtb.cpp  RopeAtb.cpp  SelfAttentionAtb.cpp  SelfAttentionAtbV2.cpp  SelfAttentionAtbV3.cpp  SelfAttentionPrefixAtbV2.cpp  SelfAttentionPrefixEncoderAtb.cpp  SelfAttentionQlensAtb.cpp  SelfAttentionUnpadAtb.cpp  SelfAttentionUnpadAtbV2.cpp
op_plugin/ops/custom/: ApplyAdamKernelNpu.cpp  ApplyAdamWKernelNpu.cpp  AsStridedKernelNpu.cpp  BatchNMSKernelNpu.cpp  BertApplyAdamKernelNpu.cpp  BmmV2KernelNpu.cpp  BoundingBoxEncodeKernelNpu.cpp  BroadcastKernelNpu.cpp  CastKernelNpu.cpp  CiouKernelNpu.cpp  Conv2dBackwardKernelNpu.cpp  Conv2dKernelNpu.cpp  Conv3dBackwardKernelNpu.cpp  ConvTranspose2dBackwardKernelNpu.cpp  ConvTranspose3dBackwardKernelNpu.cpp  DecodeJpegKernelNpu.cpp  DeformableConv2dKernelNpu.cpp  (+31 more)
op_plugin/python/: __init__.py
op_plugin/utils/: AdvancedIndex.cpp  AdvancedIndex.h  Export.h  KernelNpuNewParams.cpp  KernelNpuNewParams.h  KernelNpuOutputDtype.cpp  KernelNpuOutputDtype.h  KernelNpuOutputSize.cpp  KernelNpuOutputSize.h  NamedTensorCompat.h  OpAdapter.h  OpConstants.h  OpUtils.cpp  OpUtils.h  RandomUtil.h  SearchsortedSideUtil.h  SearchsortedValidateUtil.h  SearchsortedWarnUtil.h  StdVarCorrectionUtils.h  Version.h  npu_op_command.h  npu_op_command_impl.cpp  op_api_common.cpp  op_api_common.h  op_api_common_base.h  op_log.cpp  op_log.h  op_log_utils.h  ops.cpp
(+4301 files in other folders)
